; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_handle_lock_session_to_proc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_necp.c_necp_handle_lock_session_to_proc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.necp_session = type { i32 }

@TRUE = common dso_local global i32 0, align 4
@NECP_PACKET_TYPE_LOCK_SESSION_TO_PROC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.necp_session*, i32, i32, i32)* @necp_handle_lock_session_to_proc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @necp_handle_lock_session_to_proc(%struct.necp_session* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.necp_session*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.necp_session* %0, %struct.necp_session** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* @TRUE, align 4
  %10 = load %struct.necp_session*, %struct.necp_session** %5, align 8
  %11 = getelementptr inbounds %struct.necp_session, %struct.necp_session* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.necp_session*, %struct.necp_session** %5, align 8
  %13 = load i32, i32* @NECP_PACKET_TYPE_LOCK_SESSION_TO_PROC, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @necp_send_success_response(%struct.necp_session* %12, i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @necp_send_success_response(%struct.necp_session*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
